tests/mock-server-err.txt
events.js:174
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::9900
    at Server.setupListenHandle [as _listen2] (net.js:1277:14)
    at listenInCluster (net.js:1325:12)
    at Server.listen (net.js:1412:7)
    at Function.listen (/home/kamil/workspace/sealights/projects/sealights-gradle-plugin-tests/tests/node_modules/express/lib/application.js:618:24)
    at startServer (/home/kamil/workspace/sealights/projects/sealights-gradle-plugin-tests/tests/node_modules/@sealights/server-mock/dist/server.js:29:9)
    at Object.<anonymous> (/home/kamil/workspace/sealights/projects/sealights-gradle-plugin-tests/tests/node_modules/@sealights/server-mock/dist/server.js:40:1)
    at Module._compile (internal/modules/cjs/loader.js:689:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
Emitted 'error' event at:
    at emitErrorNT (net.js:1304:8)
    at process._tickCallback (internal/process/next_tick.js:63:19)
    at Function.Module.runMain (internal/modules/cjs/loader.js:745:11)
    at startup (internal/bootstrap/node.js:283:19)
    at bootstrapNodeJSCore (internal/bootstrap/node.js:743:3)
